crates/carta/tests/snapshots/golden_writer__revealjs__common__ordered-example.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<ol class="example" type="1">
<li>first</li>
<li>second</li>
</ol>
</section>
