crates/carta/tests/snapshots/golden_writer__revealjs__common__ordered-start.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<ol start="5" type="1">
<li>five</li>
<li>six</li>
</ol>
</section>
