crates/carta/tests/snapshots/golden_writer__revealjs__common__ordered-upper-roman.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p>I. one II. two</p>
</section>
