crates/carta/tests/snapshots/golden_writer__revealjs__common__quoted-smart.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p>She said “hello” and ‘hi’.</p>
</section>
