crates/carta/tests/snapshots/golden_writer__revealjs__common__raw-html-block.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<div class="x">
raw block
</div>
</section>
